# coord-tui

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPLAINME.adoc  README.adoc  README.md  ROADMAP.adoc  flake.nix  install.sh
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
shell/: coord-hooks.sh
src/: main.rs
