# SPDX-License-Identifier: PMPL-1.0-or-later
# (MPL-2.0 required for crates.io; PMPL-1.0-or-later preferred)
[package]
name = "coord-tui"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Rapid-setup TUI for BoJ local-coord-mcp (AI multi-instance coordination)"
license = "MPL-2.0"

# Architecture note: pure functions (state transitions, key dispatch) are
# deliberately isolated so SPARK/Ada formal modules can replace them later
# via Idris2-ABI + Zig-FFI (see boj-server/src/abi/).

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
ureq       = "2"
serde_json = "1"
clap       = { version = "4", features = ["derive", "env"] }
